# GooseVF

./: .gitignore  CMakeLists.txt  README.md
include/: FileReader.h  FileWriter.h  Utility.h  pch.h
include/GooseVF/: FileReader.h  Utility.h
src/: FileReader.cpp  FileWriter.cpp  Utility.cpp
src/GooseVF/: FileReader.cpp  FileWriter.cpp  Utility.cpp  pch.cpp
